# analyze-fin

./: .env.test  .gitignore  .mcp.json  DEVELOPMENT_GUIDE.md  INDEX.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  SKILLS_GUIDE.md  alembic.ini  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/hooks/: auto-code-review-on-edit.py  check-pending-reviews-on-stop.py
_bmad-output/: architecture.md  atdd-checklist-comprehensive.md  automation-summary.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-12-15.md  prd.md  project-context.md  test-design-system.md  test-framework-summary.md  test-review.md
_bmad-output/implementation-artifacts/: 1-1-project-foundation-database-setup.md  1-2-gcash-statement-parser.md  1-3-bpi-statement-parser-with-password-handling.md  1-4-maya-statement-parser.md  1-5-batch-import-quality-reporting.md  3-4-visualization-with-plotly-charts.md  3-5-report-generation-html-markdown.md  3-6-natural-language-query-interface.md  4-1-data-export-csv-json.md  4-2-configuration-system.md  4-3-cli-modes-interactive-vs-batch.md  4-4-output-format-flags-exit-codes.md  4-6-advanced-cli-features-polish.md  4-7-unified-parse-workflow.md  5-1-parser-account-identifier-extraction.md  5-2-database-schema-multi-account-support.md  5-3-account-context-in-reports-queries.md  5-4-account-scoped-deduplication.md  5-5-skill-updates-for-account-context.md  next-sprint-plan.md  sprint-status.yaml  validation-report-1-5-2025-12-23.md  validation-report-3-5-2026-01-02.md  validation-report-3-6-2026-01-02.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
alembic/: env.py
alembic/versions/: 96f1a1b6c577_add_account_identifier_fields.py  dbd478af76d0_initial_schema_accounts_statements_.py
data/: spending-report.html
scripts/: create_test_fixtures.py
src/analyze_fin/: __init__.py  cli.py  exceptions.py
templates/reports/: dashboard.html.j2  summary.md.j2
tests/: QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  test_cli.py  test_example.py  test_exceptions.py
tests/analysis/: test_spending.py
tests/categorization/: test_categorization_atdd.py  test_categorizer.py  test_example_categorizer.py  test_learning.py  test_normalizer.py  test_taxonomy.py
tests/cli/: __init__.py  conftest.py  test_ask.py  test_exit_codes.py  test_export.py  test_formatters.py  test_help.py  test_maintenance_commands.py  test_modes.py  test_parse.py  test_query.py  test_report.py  test_version.py
tests/config/: test_config.py
tests/database/: test_example_models.py  test_models.py  test_multi_account.py  test_session.py
tests/dedup/: test_detector.py  test_resolver.py
tests/e2e/: test_account_info_extraction.py  test_bpi_real_e2e.py  test_categorization_integration.py  test_export_workflow.py  test_parse_workflow.py  test_query_engine_workflow.py
tests/export/: test_exporter.py
tests/fixtures/: PDF_FIXTURES_GUIDE.md
tests/parsers/: conftest.py  test_base_parser.py  test_batch_import.py  test_bpi_parser.py  test_example_parser.py  test_gcash_parser.py  test_gcash_parser_atdd.py  test_maya_parser.py
tests/queries/: conftest.py  test_nl_parser.py  test_spending_query.py  test_spending_query_execute_aggregates.py  test_spending_query_filters.py  test_spending_query_formatters.py  test_spending_query_init.py
tests/reports/: __init__.py  conftest.py  test_charts.py  (+7 more)
(+53 files in other folders)
